--- a/css/product.scss
+++ b/css/product.scss
@@ -389,7 +389,430 @@ body {
 //</slider>====================
 
 //<preview>====================
+.preview {
+    position: relative;
+    margin: -55px 0 0 0;
 
+    @media (max-width: 545px) {
+        & {
+            margin: -45px 0 0 0;
+        }
+    }
+
+    @media (max-width: 487px) {
+        & {
+            margin: -30px 0 0 0;
+        }
+    }
+
+    &__container {
+        margin: 0 auto;
+        max-width: 1141px;
+        border: 1px solid #eaeaea;
+        background-color: #fff;
+    }
+
+    &__upper {
+        margin: 64px 0 0 0;
+    }
+
+    &__lover {
+        margin: 65.04px 0 0 0;
+    }
+}
+
+.upper {
+    &__heading {
+        text-align: center;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 120%;
+        margin: 0 0 12.1px 0;
+        color: #f16d7f;
+    }
+
+    &__bd {
+        margin: 0 auto;
+        height: 3.03px;
+        width: 63px;
+        background-color: #ef5b70;
+    }
+
+    &__title {
+        text-align: center;
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 122%;
+        margin: 12.1px 0 48.41px 0;
+        color: #4d4d4d;
+    }
+
+    &__text {
+        margin: 0 auto;
+        max-width: 650px;
+        text-align: center;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 121%;
+        color: #5e5e5e;
+    }
+
+    &__price {
+        text-align: center;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 120%;
+        margin: 32.27px 0 0 0;
+        color: #ef5b70;
+    }
+}
+
+.lover {
+    &__bd {
+        margin: 0 auto;
+        width: 641px;
+        height: 1px;
+        background-color: #eaeaea;
+    }
+
+    &__settings {
+        margin: 65.05px 0 48.41px 0;
+
+        ul {
+            display: flex;
+            justify-content: center;
+
+            li {
+                height: 10.1px;
+                display: flex;
+                align-items: center;
+
+                font-size: 14px;
+                line-height: 121%;
+                color: #6f6e6e;
+
+                cursor: pointer;
+
+                img {
+                    margin-left: 9px;
+                }
+            }
+
+            li:nth-child(2) {
+                margin: 0 23px;
+            }
+        }
+    }
+
+    &__btn {
+        margin: 0 0 64.5px 0;
+        display: flex;
+        justify-content: center;
+
+        a {
+            width: 212px;
+            height: 48.41px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #ff6a6a;
+            padding-right: 20px;
+            font-size: 16px;
+            line-height: 118%;
+            color: #f26376;
+            background-color: #fff;
+            transition: all 0.23s ease;
+
+            svg {
+                margin-right: 22.99px;
+
+                path {
+                    transition: fill 0.23s ease;
+                }
+            }
+        }
+
+        a:hover {
+            background-color: #f16d7f;
+            color: #fff;
+        }
+
+        a:hover .lover__img {
+            fill: #fff;
+        }
+    }
+}
 //</preview>====================
 
+//<catalog>====================
+.catalog {
+    margin: 129.41px 0 0 0;
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__card {
+        max-width: 360px;
+        cursor: pointer;
+        background: #f8f8f8;
+
+        h4 {
+            padding-top: 24.35px;
+            padding-left: 17px;
+            font-size: 15px;
+            line-height: 120%;
+            font-weight: 600;
+            color: #000000;
+        }
+
+        p {
+            padding: 12.65px 0 18px 17px;
+        }
+
+        h3 {
+            padding-bottom: 20px;
+            padding-left: 17px;
+            font-size: 16px;
+            line-height: 118%;
+            font-weight: normal;
+            color: #f16d7f;
+        }
+    }
+
+    @media (max-width: 768px) {
+        &__card:last-child {
+            display: none;
+        }
+    }
+
+    @media (max-width: 500px) {
+        &__container {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    &__card:hover &__overlay {
+        opacity: 1;
+    }
+
+    &__img {
+        position: relative;
+
+        img {
+            object-fit: cover;
+            object-position: center;
+            max-width: 100%;
+        }
+    }
+
+    &__overlay {
+        background: rgba(58, 56, 56, 0.86);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: 0.37s;
+
+        a {
+            width: 138px;
+            min-height: 43px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #ffffff;
+        }
+
+        img {
+            padding: 0 0 0 13px;
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 121%;
+            color: #ffffff;
+            padding: 0 16px 0 0;
+        }
+    }
+}
+//</catalog>====================
+
+//<follow>====================
+.follow {
+    margin: 128px 0 0 0;
+    background-color: #f3f3f3;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 448px;
+    }
+
+    &__review {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 329px;
+
+        img {
+            width: 96px;
+            height: 96px;
+        }
+
+        h5 {
+            text-align: center;
+            padding: 30px 0 0 0;
+        }
+    }
+
+    &__subscribe {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h3 {
+            font-size: 24px;
+            line-height: 167.2%;
+            font-weight: 700;
+            color: #222224;
+        }
+
+        h4 {
+            font-size: 18px;
+            line-height: 167.2%;
+            font-weight: 400;
+            color: #222224;
+            text-align: center;
+        }
+    }
+
+    &__subscribe-send {
+        margin: 32px 0 0 0;
+        display: flex;
+
+        input {
+            padding: 0 22px;
+            max-width: 256px;
+            min-height: 49px;
+            border-top-left-radius: 30px;
+            border-bottom-left-radius: 30px;
+            background: #e1e1e1;
+
+            font-size: 14.5px;
+        }
+    }
+
+    &__subscribe-submit {
+        width: 100px;
+        min-height: 49px;
+        background: #f16d7f;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+
+        transition: 0.23s;
+
+        a {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 14px;
+            line-height: 121%;
+            color: #ffffff;
+        }
+    }
+
+    &__subscribe-submit:hover {
+        background: #e05c6e;
+    }
+
+    @media (max-width: 768px) {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__review {
+            margin: 64px 0 0 0;
+        }
+
+        &__subscribe {
+            margin: 48px 0 140px 0;
+        }
+    }
+}
+//</follow>====================
+
 //</MAIN>====================
+
+//<FOOTER>====================
+
+.footer {
+    background: #222224;
+
+    &__container {
+        min-height: 79px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__text {
+        p {
+            font-size: 16px;
+            line-height: 118%;
+            color: #fbfbfb;
+        }
+    }
+
+    &__net {
+        ul {
+            display: flex;
+        }
+
+        li:not(:last-child) {
+            padding-right: 7.29px;
+        }
+
+        li a:hover .white {
+            fill: #f16d7f;
+        }
+
+        li a:hover .black {
+            fill: #ffffff;
+        }
+    }
+
+    @media (max-width: 425px) {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__text {
+            order: 2;
+            margin: 0 0 9px 0;
+        }
+
+        &__net {
+            order: 1;
+            margin: 43px 0 40px 0;
+        }
+    }
+}
+
+.white {
+    transition: 0.22s;
+}
+
+.black {
+    transition: 0.22s;
+}
+
+//</FOOTER>====================
