--- a/css/catalog.scss
+++ b/css/catalog.scss
@@ -853,7 +853,9 @@ details > summary::-webkit-details-marker {
 }
 
 .follow {
-    background-color: #f3f3f3;
+    background-image: url(..//img/back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     &__container {
         display: flex;
         justify-content: space-between;
