--- a/css/product.css
+++ b/css/product.css
@@ -694,7 +694,9 @@ body {
 
 .follow {
   margin: 128px 0 0 0;
-  background-color: #f3f3f3;
+  background-image: url(..//img/back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .follow__container {
