--- a/css/style.css
+++ b/css/style.css
@@ -880,7 +880,9 @@ body {
 }
 
 .follow {
-  background-color: #f3f3f3;
+  background-image: url(..//img/back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .follow__container {
