--- a/css/product.scss
+++ b/css/product.scss
@@ -647,7 +647,9 @@ body {
 //<follow>====================
 .follow {
     margin: 128px 0 0 0;
-    background-color: #f3f3f3;
+    background-image: url(..//img/back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     &__container {
         display: flex;
         justify-content: space-between;
