--- a/css/style.scss
+++ b/css/style.scss
@@ -782,7 +782,9 @@ body {
 }
 
 .follow {
-    background-color: #f3f3f3;
+    background-image: url(..//img/back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     &__container {
         display: flex;
         justify-content: space-between;
