--- a/css/product.css
+++ b/css/product.css
@@ -699,6 +699,18 @@ body {
   background-size: cover;
 }
 
+@media (max-width: 768px) {
+  .follow {
+    background-position-x: -200px;
+  }
+}
+
+@media (max-width: 425px) {
+  .follow {
+    background-position-x: -400px;
+  }
+}
+
 .follow__container {
   display: -webkit-box;
   display: -ms-flexbox;
