--- a/css/cart.scss
+++ b/css/cart.scss
@@ -569,6 +569,11 @@ body {
         border: 1px solid #a4a4a4;
         background-color: #fff;
         cursor: pointer;
+        transition: 0.13s;
+    }
+
+    &__btn:hover {
+        box-shadow: 4px 1px 8px #575757;
     }
 
     @media (max-width: 1050px) {
@@ -654,7 +659,7 @@ body {
         margin: 20.5px 0;
     }
 
-    button {
+    &__confirm {
         margin-top: 23px;
         width: 101.41px;
         height: 35px;
@@ -669,6 +674,11 @@ body {
         line-height: 118%;
 
         cursor: pointer;
+        transition: 0.13s;
+    }
+
+    &__confirm:hover {
+        box-shadow: 4px 1px 8px #575757;
     }
 
     &__global {
@@ -713,22 +723,6 @@ body {
                 }
             }
         }
-
-        button {
-            margin: 0 auto;
-            width: 273px;
-            height: 50px;
-            background: #f16d7f;
-            border: none;
-            font-weight: 300;
-            font-size: 16px;
-            line-height: 118%;
-            color: #ffffff;
-
-            @media (max-width: 360px) {
-                margin-top: 39px;
-            }
-        }
     }
 
     &__bd {
@@ -747,6 +741,31 @@ body {
 
     @media (max-width: 360px) {
         width: 100%;
+    }
+
+    &__global-ok {
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 273px;
+        min-height: 50px;
+        background: #f16d7f;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 118%;
+        color: #ffffff;
+
+        cursor: pointer;
+        transition: 0.22s;
+
+        @media (max-width: 360px) {
+            margin-top: 39px;
+        }
+    }
+
+    &__global-ok:hover {
+        background: #e05c6e;
     }
 }
 //</order>====================
